# python2proto

./: README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
examples/: simple_example.py
python2proto/: __init__.py
